--- a/webapp/view/View1.view.xml
+++ b/webapp/view/View1.view.xml
@@ -5,5 +5,6 @@
 
     <Label id="_IDGenLabel" text="Hello World"/>
     <Button id="_IDGenButton" text="Clik Here"/>
+    <Text id="_IDGenText" text="Everything is working here"/>
     </Page>
 </mvc:View>
